Fix header on mobile screen

--- a/app/assets/stylesheets/html5boilerplate.css.scss
+++ b/app/assets/stylesheets/html5boilerplate.css.scss
@@ -264,10 +264,6 @@ p.notice {
    ========================================================================== */
 
 @media only screen and (max-width: 768px) {
-  body {
-    padding-top: 10em;
-  }
-
   .alert {
     margin-top: 0.25em;
   }
